# MontBlanc

./: .gitignore  CMakeLists.txt  README.md
Results/MAPFF10NLOPIp/: BestParameters.yaml  Chi2s.yaml  Predictions.yaml
Results/MAPFF10NLOPIp/data/: ALEPH_PI_PLUS_MINUS.yaml  BABAR_PI_PLUS_MINUS_PROMPT.yaml  BELLE_PI_PLUS_MINUS.yaml  COMPASS_PI_MINUS.yaml  COMPASS_PI_PLUS.yaml  DELPHI_PI_PLUS_MINUS.yaml  DELPHI_PI_PLUS_MINUS_B.yaml  DELPHI_PI_PLUS_MINUS_UDS.yaml  HERMES_PI_MINUS_PROTON.yaml  HERMES_PI_PLUS_DEUTERON.yaml  HERMES_PI_PLUS_PROTON.yaml  OPAL_PI_PLUS_MINUS.yaml  SLD_PI_PLUS_MINUS.yaml  SLD_PI_PLUS_MINUS_B.yaml  SLD_PI_PLUS_MINUS_UDS.yaml  TASSO_12_PI_PLUS_MINUS.yaml  TASSO_14_PI_PLUS_MINUS.yaml  TASSO_22_PI_PLUS_MINUS.yaml  TASSO_30_PI_PLUS_MINUS.yaml  TASSO_34_PI_PLUS_MINUS.yaml  TASSO_44_PI_PLUS_MINUS.yaml  TOPAZ_PI_PLUS_MINUS.yaml  TPC_PI_PLUS_MINUS.yaml
Results/MAPFF10NLOPIp/log/: replica_1.yaml  replica_10.yaml  replica_100.yaml  replica_101.yaml  replica_102.yaml  replica_103.yaml  replica_104.yaml  replica_105.yaml  replica_106.yaml  replica_107.yaml  replica_108.yaml  replica_109.yaml  replica_11.yaml  replica_110.yaml  replica_111.yaml  replica_112.yaml  replica_113.yaml  replica_114.yaml  replica_115.yaml  replica_116.yaml  replica_117.yaml  replica_118.yaml  replica_119.yaml  replica_12.yaml  replica_120.yaml  replica_121.yaml  replica_122.yaml  replica_123.yaml  replica_124.yaml  replica_125.yaml  replica_126.yaml  replica_127.yaml  replica_128.yaml  replica_129.yaml  replica_13.yaml  replica_130.yaml  replica_131.yaml  replica_132.yaml  replica_133.yaml  replica_134.yaml  (+260 more)
analysis/: AnalysePredictions.ipynb  MatplotlibSettings.py  NewAnalysePredictions.ipynb
config/: MAPFF10_210301_SIA_SIDIS_6fl_pos_woSLDc.yaml  MAPFF10_210301_SIA_SIDIS_7fl.yaml  MAPFF10_210301_SIA_SIDIS_7fl_pos_woSLDc_NNLO.yaml  MAPFF10_210301_SIA_SIDIS_7fl_woSLDc.yaml  MAPFF10_210301_SIA_SIDISlowQ_6fl_woSLDc.yaml  MAPFF10_210301_SIA_SIDISlowQ_7fl_woSLDc.yaml  MAPFF10_210309_CT18.yaml  MAPFF10_210309_HERMES.yaml  MAPFF10_210309_SIDIScutQ1_00.yaml  MAPFF10_210309_SIDIScutQ1_25.yaml  MAPFF10_210309_SIDIScutQ1_75.yaml  MAPFF10_210309_SIDIScutQ2_50.yaml  MAPFF10_300301_SIAonly.yaml  new_runcard.yaml
config/MAPFF10/KA/: MAPFF10_220115_global_woSLDc_KA_arch20.yaml  MAPFF10_220115_global_woSLDc_KA_arch30.yaml  MAPFF10_220115_global_woSLDc_KA_arch40.yaml  MAPFF10_220121_global_woSLDc_KA_arch30_wf_trf03.yaml  MAPFF10_220121_global_woSLDc_KA_arch30_wf_trf04.yaml  MAPFF10_220201_BABAR2.yaml  MAPFF10_220201_BABAR2_NLO.yaml  MAPFF10_220201_BABAR2_arch30.yaml
config/MAPFF10/PI/: MAPFF10_210301_SIA_SIDIS_6fl_woSLDc.yaml  MAPFF10_210301_SIA_SIDIS_7fl_mu1.yaml  MAPFF10_210301_SIA_SIDISlowQ_7fl_mu1.yaml  MAPFF10_210309_COMPASS.yaml  MAPFF10_210309_SIDIScutQ3_00.yaml  MAPFF10_211102_Kaons.yaml  MAPFF10_220221_PI_NNLO_DECORR.yaml
config/MAPFF10_KA/: MAPFF10_211208_NLO_woHERMES.yaml  MAPFF10_211209_NLO_woSLDc.yaml  MAPFF10_211209_SIAonly_NLO.yaml  MAPFF10_211220_SIAonly_KA.yaml  MAPFF10_211220_SIAonly_PI.yaml  MAPFF10_220108_global_KA.yaml  MAPFF10_220121_SIAonly_KA_wf.yaml  MAPFF10_220121_global_woSLDc_woBABAR_KA_arch30_wf.yaml  MAPFF10_220125_global_woSLDc_KA_arch30_BABARcuts.yaml  MAPFF10_220201_BABAR076.yaml  MAPFF10_220201_BABAR1.yaml  MAPFF10_220201_BABAR15.yaml  MAPFF10_220201_BABAR2_arch40.yaml  MAPFF10_220221_KA_NLO_DECORR.yaml  MAPFF10_220221_KA_NNLO_DECORR.yaml
config/MAPFF10_KA/deprecated/: MAPFF10_211208_NLO.yaml
config/MAPFF10_PI/: MAPFF10_210226_SIA_SIDISlowQ_7fl_pos_woSLDc.yaml  MAPFF10_210301_SIA_SIDIS_7fl_pos_woSLDc.yaml  MAPFF10_210301_SIA_SIDIS_7fl_positive.yaml  MAPFF10_210309_MSHT.yaml  MAPFF10_210309_NNPDF31.yaml  MAPFF10_220204_NNLO.yaml  MAPFF10_220204_NNLO_NLOPDF.yaml  MAPFF10_220221_PI_NLO_DECORR.yaml  MAPFF10_220221_PI_NNLO_DECORR.yaml
config/MAPFF20/KA/: MAPFF20_KA_LO_Q2_00.yaml  MAPFF20_KA_NLO_Q1_00.yaml  MAPFF20_KA_NLO_Q1_25.yaml  MAPFF20_KA_NLO_Q1_50.yaml  MAPFF20_KA_NNLO.yaml  (+8 more)
config/SHK22_h/: SHK22_h_charged_hadron_FFs.yaml
data/: ALEPH_H_PLUS_MINUS.yaml  ALEPH_KA_PLUS_MINUS.yaml  ALEPH_PI_PLUS_MINUS.yaml  ALEPH_PR_PLUS_MINUS.yaml  BABAR_KA_PLUS_MINUS_CONVENTIONAL.yaml  BABAR_KA_PLUS_MINUS_CONVENTIONAL_UNCORR.yaml  BABAR_KA_PLUS_MINUS_PROMPT.yaml  BABAR_PI_PLUS_MINUS_CONVENTIONAL.yaml  BABAR_PI_PLUS_MINUS_PROMPT.yaml  BABAR_PR_PLUS_MINUS_CONVENTIONAL.yaml  BABAR_PR_PLUS_MINUS_PROMPT.yaml  BELLE_KA_PLUS_MINUS.yaml  BELLE_PI_PLUS_MINUS.yaml  BELLE_PI_PLUS_MINUS_2020.yaml  COMPASS_G1D.yaml  COMPASS_G1P.yaml  COMPASS_H_MINUS.yaml  COMPASS_H_MINUS_total_eror.yaml  COMPASS_H_PLUS.yaml  COMPASS_H_PLUS_total_error.yaml  COMPASS_KA_MINUS.yaml  COMPASS_KA_MINUS_DECORR.yaml  COMPASS_KA_PLUS.yaml  COMPASS_KA_PLUS_DECORR.yaml  COMPASS_KA_RATIO_2018_v1  COMPASS_KA_RATIO_2018_vA1  COMPASS_KA_RATIO_2020  COMPASS_PI_MINUS.yaml  COMPASS_PI_MINUS_DECORR.yaml  COMPASS_PI_MINUS_UNC.yaml  COMPASS_PI_PLUS.yaml  COMPASS_PI_PLUS_DECORR.yaml  COMPASS_PI_PLUS_UNC.yaml  DELPHI_H_PLUS_MINUS.yaml  DELPHI_H_PLUS_MINUS_B.yaml  DELPHI_H_PLUS_MINUS_UDS.yaml  DELPHI_KA_PLUS_MINUS.yaml  DELPHI_KA_PLUS_MINUS_B.yaml  DELPHI_KA_PLUS_MINUS_UDS.yaml  DELPHI_PI_PLUS_MINUS.yaml  (+94 more)
inc/MontBlanc/: AnalyticChiSquare.h  IterationCallBack.h  LHAPDFparameterisation.h  NNADparameterisation.h  predictionshandler.h  predictionshandlerdata.h  version.h.in
resources/: astyle.sh
run/: CMakeLists.txt  ComputeChi2s.cc  LHAPDFGrid.cc  NNGrid.cc  Optimize.cc  Prediction_SIDIS.cc  Predictions.cc  Predictions_SIDIS.cc  Predictions_SIDIS_V2.cc  reweighting.cc  reweighting_V2.cc  unweighting.cc
src/: CMakeLists.txt
src/chisquare/: AnalyticChiSquare.cc  CMakeLists.txt  IterationCallBack.cc
src/parameterisations/: CMakeLists.txt  LHAPDFparameterisation.cc  NNADparameterisation.cc
src/predictions/: CMakeLists.txt  predictionshandler.cc  predictionshandlerdata.cc
tests/: CMakeLists.txt  ClosureTests.cc  MCReplicaGeneration.cc  Reweighting.cc  fl_comb.py
transfer/: plot_PDFs_v2.ipynb
transfer/Optimize/: Dockerfile  script.sh
transfer/UnweightedSet/: UnweightedSet.info
transfer/Weights/: weight_for_PDFS.yaml
(+6326 files in other folders)
